@@ -11,9 +11,9 @@ class Sys::Socket::Sockaddr::Un extends Sys::Socket::Sockaddr : pointer_t {
     return $sun_family;
   }
   
-  native method sun_family : int ();
+  native method sun_family : byte ();
 
-  native method set_sun_family : int ();
+  native method set_sun_family : void ($family : byte);
 
   native method sun_path : string ();
 
